--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,9 +42,9 @@
                                   <li><a class="J_menuItem" th:href="@{MySoftwareCopyright}">My Software Copyright</a></li>
                                    <li><a class="J_menuItem" href="ThesisListResult.html">My Project</a></li>
                                    <li><a class="J_menuItem" href="Management.html">Management</a></li>
-                                  <li><a class="J_menuItem" href="ReportStatistics.html">Report Statistics</a></li> 
-                                 <li><a class="J_menuItem" >谢文仲</a></li> 
-                                 <li><a class="J_menuItem" th:href="@{login}">退出</a></li>
+                                  <li><a class="J_menuItem" href="ReportStatistics.html">Report Statistics</a></li>
+                                <li><a class="J_menuItem" th:text="${session.user.getUserName()}">谢文仲</a></li>
+                                 <li><a class="J_menuItem" th:href="@{logout}">退出</a></li>
                             </ul>
                         </nav>             
                     <!-- mainmenu close -->
