--- a/src/main/resources/templates/ReportStatistics.html
+++ b/src/main/resources/templates/ReportStatistics.html
@@ -39,7 +39,7 @@
                                 <li><a class="J_menuItem" th:href="@{MyThesis}">My Thesis</a></li>
                                 <li><a class="J_menuItem" th:href="@{MySoftwareCopyright}">My Software Copyright</a></li>
             <li><a class="J_menuItem" href="ThesisListResult.html">My Project</a></li>
-            <li><a class="J_menuItem" href="Management.html">Management</a></li>
+            <li><a class="J_menuItem" href="AddThesis.html">Management</a></li>
             <li><a class="J_menuItem" href="ReportStatistics.html">Report Statistics</a></li> 
             <li><a class="J_menuItem" >谢文仲</a></li> 
             <li><a class="J_menuItem" href="login.html">退出</a></li> 
