--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
                                  <li><a class="J_menuItem" th:href="@{MyThesis}">My Thesis</a></li>
                                   <li><a class="J_menuItem" th:href="@{MySoftwareCopyright}">My Software Copyright</a></li>
                                    <li><a class="J_menuItem" href="ThesisListResult.html">My Project</a></li>
-                                   <li><a class="J_menuItem" href="Management.html">Management</a></li>
+                                   <li><a class="J_menuItem" href="AddThesis.html">Management</a></li>
 
                                   <li><a class="J_menuItem" href="ReportStatistics.html">Report Statistics</a></li>
                                 <li><a class="J_menuItem" th:text="${session.user.getUserName()}">谢文仲</a></li>
