论文搜索结果界面

--- a/src/main/resources/templates/MyThesis.html
+++ b/src/main/resources/templates/MyThesis.html
@@ -42,7 +42,7 @@
                     <li><a class="J_menuItem" th:href="@{MySoftwareCopyright}">My Software Copyright</a></li>
                     <li><a class="J_menuItem" href="ThesisListResult.html">My Project</a></li>
                     <li><a class="J_menuItem" href="AddThesis.html">Management</a></li>
-                    <li><a class="J_menuItem" href="ReportStatistics.html">Report Statistics</a></li>
+                    <li><a class="J_menuItem" href="ThesisDetail.html">Report Statistics</a></li>
                     <li><a class="J_menuItem" >谢文仲</a></li>
                     <li><a class="J_menuItem" th:href="@{logout}">退出</a></li>
 
