--- a/src/main/resources/templates/ThesisListResult.html
+++ b/src/main/resources/templates/ThesisListResult.html
@@ -41,7 +41,7 @@
                                 <li><a class="J_menuItem" th:href="@{MySoftwareCopyright}">My Software Copyright</a></li>
             <li><a class="J_menuItem" href="ThesisListResult.html">My Project</a></li>
             <li><a class="J_menuItem" href="AddThesis.html">Management</a></li>
-            <li><a class="J_menuItem" href="ReportStatistics.html">Report Statistics</a></li>
+            <li><a class="J_menuItem" href="ThesisDetail.html">Report Statistics</a></li>
                                 <li><a class="J_menuItem" th:text="${session.user.getUserName()}">谢文仲</a></li>
                                 <li><a class="J_menuItem" th:href="@{logout}">退出</a></li>
              
@@ -56,31 +56,38 @@
      </header>
     
         <!-- header close -->
-
-
         <!-- content begin -->
         <div id="content">
-            <table data-toggle="table">
-                <thead>
-                <tr>
-                    <th>Item ID</th>
-                    <th>Item Name</th>
-                    <th>Item Price</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Item 1</td>
-                    <td>$1</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Item 2</td>
-                    <td>$2</td>
-                </tr>
-                </tbody>
-            </table>
+            <div class="row">
+                <h3 class="text-center">论文搜索结果</h3>
+            </div>
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2" >
+                    <div class="panel panel-warning" th:each="list:${thesisList}">
+                        <a th:href="@{'/ThesisDetail/'+${list.getThesisId()}}">
+
+                            <div class="panel-heading panel-warning">
+                                <h3 class="panel-title text-center" th:text="${list.getThesisId()}"></h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="row">
+                                    <div class="col-md-4 col-md-offset-1 panel-title">
+                                        <p th:text="${list.getThesisTitle()}">名称</p>
+                                    </div>
+                                    <div class="col-md-2 panel-title">
+                                        <p th:text="${list.getAuthor1().getUserName()}">作者1名称</p>
+                                    </div>
+                                    <div class="col-md-2 panel-title">
+                                        <p th:text="${list.getJournal()}"></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                    </div>
+                </div>
+            </div>
+
 </div>
 
           
