--- a/src/main/resources/templates/MySoftwareCopyright.html
+++ b/src/main/resources/templates/MySoftwareCopyright.html
@@ -37,13 +37,13 @@
                         <!-- mainmenu begin -->
                         <nav  class="navbar" role="navigation" style="margin-bottom: 0">
                             <ul id="mainmenu" class="navbar-left">
-                                <li><a class="J_menuItem black" th:href="@{index}">Home</a></li>
-                                <li><a class="J_menuItem" th:href="@{MyThesis}">My Thesis</a></li>
-                                <li><a class="J_menuItem" th:href="@{MySoftwareCopyright}">My Software Copyright</a></li>
-            <li><a class="J_menuItem" href="ThesisListResult.html">My Project</a></li>
-            <li><a class="J_menuItem" href="AddThesis.html">Management</a></li>
-            <li><a class="J_menuItem" href="ThesisDetail.html">Report Statistics</a></li>
-                                <li><a class="J_menuItem" th:text="${session.user.getUserName()}">谢文仲</a></li>
+                                <li><a class="J_menuItem black" th:href="@{/index}">Home</a></li>
+                                <li><a class="J_menuItem" th:href="@{/MyThesis}">My Thesis</a></li>
+                                <li><a class="J_menuItem" th:href="@{/MySoftwareCopyright}">My Software Copyright</a></li>
+                                <li><a class="J_menuItem" th:href="@{/subjectManagement}">My Project</a></li>
+                                <li><a class="J_menuItem" th:href="@{/userManagement}">Management</a></li>
+                                <li><a class="J_menuItem" th:href="@{/}">Report Statistics</a></li>
+                                <li><a class="J_menuItem" >谢文仲</a></li>
                                 <li><a class="J_menuItem" th:href="@{logout}">退出</a></li>
              
                             </ul>
