--- a/src/main/resources/templates/ThesisListResult.html
+++ b/src/main/resources/templates/ThesisListResult.html
@@ -84,7 +84,7 @@
                             </div>
                         </a>
 
-                    </div>
+                    </div> <!-- panel panel-warning -->
                 </div>
             </div>
 
