--- a/src/main/resources/templates/AddThesis.html
+++ b/src/main/resources/templates/AddThesis.html
@@ -67,7 +67,7 @@
                         <h3 class="panel-title ">登记论文</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form" method="post" th:action="@{AddThesisSubmit}">
+                        <form role="form" method="post" th:action="@{AddThesisSubmit}" name="myform1">
                             <div class="form-group">
                                 <div class="row">
                                     <label for="input1" class="col-md-1 control-label col-md-offset-3">论文标题</label>
@@ -96,7 +96,7 @@
                                     <label for="input7" class="col-md-1 control-label">期，卷</label>
                                     <div class="col-md-2"><input class="form-control" type="text"  id="input7" name="input7"></div>
                                     <label for="input8" class="col-md-1 control-label">页数</label>
-                                    <div class="col-md-2"><input class="form-control" type="text"  id="input8" name="input8"></div>
+                                    <div class="col-md-2"><input class="form-control" type="number"  id="input8" name="input8"></div>
                                     <label  class="col-md-1 control-label">私密性</label>
                                     <label class="radio-inline">
                                         <input type="radio" name="optionsRadiosinline" id="optionsRadios3" value="0" checked> 公开
@@ -115,7 +115,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-2 col-md-offset-4">
-                                <button th:type="submit" class="btn btn-warning"> 提交</button>
+                                <div onclick="checksubmit();" class="btn btn-warning"> 提交</div>
                                 </div>
                                 <div class="col-md-2 ">
                                     <a th:href="@{MyThesis}" ><div class="btn btn-warning"> 取消</div></a>
@@ -146,7 +146,19 @@
 <script src="../js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="../js/bootstrap-table.min.js"></script>
-
+<script>
+    function checksubmit() {
+        var input1= $("[name='input1']").val();
+        var input2= $("[name='input2']").val();
+        var input3= $("[name='input3']").val();
+        if($.trim(input1)==""||$.trim(input2)==""||$.trim(input3)==""){
+            alert("标题、文章编号、作者一不能为空！");
+        }else{
+            myform1.submit();
+        }
+        
+    }
+</script>
 
 </body>
 </html>
